Added show and new, no problems

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,11 +3,11 @@
 
 <ul>
     <li>
-        <%= link_to "#{value.title}"%>
+        <%= link_to "#{value.title}", blog_posts_path(value)%>
     </li>
 
 </ul>
 
 <% end %>
-
+<%= link_to 'Create A Post', new_blog_post_path%>
 
